--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "bijoy/laravel-vueform",
+    "name": "bijoy4067/vueform-laravel",
     "description": "Laraform Community Edition (Laravel)",
     "version": "1.2.2",
     "type": "library",
