--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
   },
   "require": {
     "php": "^8.2",
-    "laravel/framework": "^10.0|^11.0"
+    "laravel/framework": ">=10.0"
   },
   "autoload": {
     "psr-4": {
